--- a/client/src/components/TextArea/TextArea.module.scss
+++ b/client/src/components/TextArea/TextArea.module.scss
@@ -4,6 +4,12 @@
   padding: 10px;
 }
 
+.date {
+  text-align: center;
+  font-size: 0.8rem;
+  color: #595959;
+  letter-spacing: 0.02;
+}
 .textarea {
   box-sizing: border-box;
   padding: 1rem;
