--- a/client/src/components/NoteItem/NoteItem.module.scss
+++ b/client/src/components/NoteItem/NoteItem.module.scss
@@ -9,7 +9,7 @@
 }
 .note_active {
   transition: all 300ms ease-in;
-  background-color: #ffd666;
+  background-color: rgba(52, 176, 233, 0.228);
 }
 .text {
   font-size: 1rem;
