--- a/client/src/components/NotesList/NoteList.module.scss
+++ b/client/src/components/NotesList/NoteList.module.scss
@@ -1,4 +1,20 @@
 .list {
   border-right: 1px solid rgba(0, 0, 0, 0.06);
-  height: 100%;
+  height: 90vh;
+  overflow-y: auto;
+}
+
+.listFavoriteTitle {
+  color: #8c8c8c;
+  font-weight: 600;
+  padding-left: 0.5rem;
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
+  padding-bottom: 0.5rem;
+  border-bottom: solid rgba(0, 0, 0, 0.06);
+}
+
+.listFavorite {
+  border-bottom: solid rgba(0, 0, 0, 0.06);
+  margin-bottom: 1rem;
 }
