--- a/client/src/components/NoteItem/NoteItem.module.scss
+++ b/client/src/components/NoteItem/NoteItem.module.scss
@@ -18,9 +18,9 @@
   display: flex;
 }
 .date {
-  font-size: 1rem;
+  font-size: 0.8rem;
   color: #262626;
-  margin-right: 0.3rem;
+  margin-right: 0.5rem;
 }
 .head {
   display: flex;
@@ -38,5 +38,9 @@
 }
 
 .favorite {
+  display: none;
   padding-right: 1rem;
+}
+.favorite_visible {
+  display: block;
 }
