added cursor pounter on the date

--- a/client/src/components/TextArea/TextArea.module.scss
+++ b/client/src/components/TextArea/TextArea.module.scss
@@ -10,6 +10,10 @@
   color: #595959;
   letter-spacing: 0.02;
 }
+
+.dateString {
+  cursor: pointer;
+}
 .textarea {
   box-sizing: border-box;
   padding: 1rem;
